# PortfolioV4

./: .gitignore  .mcp.json  Makefile  README.md  devpost-award-verification.json  devpost-known-voice-projects.json  devpost-profile-voice-extract.json  fact-audit-general-claims.json  fact-audit-personal.json  fact-audit-projects-2.json  fact-audit-projects.json
.claude/: settings.json  settings.local.json
.claude/agents/: navigation-contract-reviewer.md  (+2 more)
.playwright-mcp/: page-2026-05-10T08-19-53-140Z.yml  page-2026-05-10T08-22-09-499Z.yml  page-2026-05-10T08-22-45-264Z.yml  page-2026-05-10T08-22-57-676Z.yml  page-2026-05-10T08-23-16-100Z.yml  page-2026-05-10T08-24-12-655Z.yml  page-2026-05-10T08-52-18-291Z.yml  page-2026-05-10T08-54-53-204Z.yml  page-2026-05-10T08-58-06-415Z.yml  page-2026-05-10T08-59-14-358Z.yml  page-2026-05-10T09-04-38-588Z.yml  page-2026-05-10T09-07-58-854Z.yml  page-2026-05-10T09-09-45-405Z.yml  page-2026-05-10T09-15-09-295Z.yml  page-2026-05-10T09-17-24-415Z.yml
client/: CLAUDE.md  next.config.ts  package-lock.json  pnpm-lock.yaml
client-new/: .env.local.example  .gitignore  CLAUDE.md  package.json  pnpm-lock.yaml
pinecone/: load_data.py  rewrite.py  unit_test_load_data.py
server/: README.md  agent_tools.py  app_helpers.py  deploy.sh  guardrail.py  llm.py  main.py  navigation.py  project_search.py  pyproject.toml  requirements.txt  summary.py  text_utils.py
server/docs/modules/: guardrail.md
server/scripts/: pull-secrets.sh
server/tests/: conftest.py  test_guardrail.py  test_main.py  test_navigation.py  test_text_utils.py
(+107 files in other folders)
